...
        }) {
            Text(String(localized: "Dodaj nowy cel"))
                .frame(maxWidth: .infinity)
        }
        .buttonStyle(FilledButton())
        .bold()
        .accessibilityIdentifier("addNewGoalButton")
    }
    
    var goalsList: some View {
        ForEach(goals, id: \.id) { goal in
            GoalSummaryWidget(
                viewModel: GoalSummaryViewModel(
...
